js/js.translator/testData/incremental/invalidation/jsModuleAnnotationOnObjectWithUsage/lib1/ObjectB.0.kt
external object ObjectB {
    fun getResult(): String
}